# cachewraith-desktop-pet

./: .gitignore  .prettierignore  .prettierrc.json  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: generate-icon.mjs  generate-pet-assets.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_pet_characters.sql
src-tauri/src/: ai.rs  commands.rs  events.rs  lib.rs  main.rs  positioning.rs  shortcuts.rs  tray.rs  typing.rs
src/app/: App.tsx  CompanionApp.tsx  ErrorBoundary.tsx  SettingsApp.tsx
src/components/chat/: ChatPanel.tsx
src/components/pet/: PetCanvas.tsx  PetMenu.tsx  PixelLaptop.tsx  SpeechBubble.tsx  ghost.ts  pixelPet.ts
src/components/settings/: AboutSection.tsx  AiSection.tsx  DataSection.tsx  GeneralSection.tsx  Onboarding.tsx  PetSection.tsx
src/features/chat/: chat.repository.ts  fallback.test.ts  fallback.ts  useChat.ts
src/features/pet/: pet.machine.test.ts  pet.machine.ts  pet.repository.ts  pet.service.ts  pet.stats.test.ts  pet.stats.ts  pet.types.ts
src/features/settings/: importExport.test.ts  importExport.ts
src/services/ai/: ai.ts
src/services/autostart/: autostart.ts
src/services/database/: db.ts
src/services/notifications/: notifications.ts
src/services/shortcuts/: shortcuts.ts
src/styles/: chat.css  global.css  pet.css  settings.css
src/types/: events.ts
src/utils/: clamp.ts  logger.ts  pixelArt.ts
(+30 files in other folders)
